update: flow create assignment