@@ -16,45 +16,29 @@ import com.example.auto_git_be.service.StudentAssignmentService;
 import com.example.auto_git_be.service.StudentService;
 import com.example.auto_git_be.service.TeacherAssignmentService;
 import jakarta.transaction.Transactional;
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/assignment")
-@CrossOrigin(origins = "*")
+@RequiredArgsConstructor
 public class AssignmentController {
     
-    @Autowired
-    private AssignmentService assignmentService;
-    
-    @Autowired
-    private ClassRoomService classRoomService;
-    
-    @Autowired
-    private AuthService authService;
-    
-    @Autowired
-    private GitHubService gitHubService;
-    
-    @Autowired
-    private StudentService studentService;
-    
-    @Autowired
-    private StudentAssignmentService studentAssignmentService;
-    
-    @Autowired
-    private AssignmentWorkspaceService assignmentWorkspaceService;
-    
-    @Autowired
-    private TeacherAssignmentService teacherAssignmentService;
-    
-    /**
-     * Create a new assignment (Teacher only)
-     */
+    private final AssignmentService assignmentService;
+    private final ClassRoomService classRoomService;
+    private final AuthService authService;
+    private final StudentService studentService;
+    private final StudentAssignmentService studentAssignmentService;
+    private final AssignmentWorkspaceService assignmentWorkspaceService;
+    private final TeacherAssignmentService teacherAssignmentService;
+    private final GitHubService gitHubService;
+
     @PostMapping("/create")
     public ResponseEntity<CreateAssignmentResponse> createAssignment(
             @RequestBody CreateAssignmentRequest request,
@@ -63,30 +47,27 @@ public class AssignmentController {
             String token = authHeader.substring(7);
             User teacher = authService.getUserFromToken(token);
             
-            // Get classroom
             ClassRoom classRoom = classRoomService.getClassByCode(request.getClassCode());
             
-            // Verify teacher ownership
             if (!classRoom.getTeacher().getId().equals(teacher.getId())) {
                 return ResponseEntity.status(403).build();
             }
             
-            // Create assignment
             Assignment assignment = assignmentService.createAssignment(
                     classRoom,
                     request.getTitle(),
                     request.getDescription(),
                     request.getDeadline()
             );
-            
+
             String githubToken = gitHubService.getToken();
-            
+
             CreateAssignmentResponse response = CreateAssignmentResponse.builder()
                     .assignmentId(assignment.getId().toString())
                     .assignmentCode(assignment.getAssignmentCode())
                     .title(assignment.getTitle())
-                    .repoUrl(assignment.getRepoUrl())
                     .token(githubToken)
+                    .repoUrl(assignment.getRepoUrl())
                     .deadline(assignment.getDeadline())
                     .build();
             
@@ -95,10 +76,7 @@ public class AssignmentController {
             return ResponseEntity.badRequest().build();
         }
     }
-    
-    /**
-     * Join an assignment (Student)
-     */
+
     @PostMapping("/join")
     public ResponseEntity<JoinAssignmentResponse> joinAssignment(
             @RequestBody JoinAssignmentRequest request,
@@ -118,12 +96,8 @@ public class AssignmentController {
             return ResponseEntity.badRequest().build();
         }
     }
-    
-    /**
-     * Get all assignments in a classroom
-     */
+
     @GetMapping("/class/{classCode}")
-    @Transactional
     public ResponseEntity<List<Map<String, Object>>> getAssignmentsByClass(
             @PathVariable String classCode,
             @RequestHeader("Authorization") String authHeader) {
@@ -131,21 +105,13 @@ public class AssignmentController {
             String token = authHeader.substring(7);
             User user = authService.getUserFromToken(token);
             
-            // Bước 1: Từ classCode → tìm ClassRoom (lấy id lớp học)
             ClassRoom classRoom = classRoomService.getClassByCode(classCode);
-            
-            // Bước 2: Từ ClassRoom → tìm tất cả Assignment
             List<Assignment> assignments = assignmentService.getAssignmentsByClassroom(classRoom);
-            
-            // Tìm tất cả Student có user_id = user hiện tại (có thể có nhiều Student record với user_id giống nhau)
             List<Student> currentUserStudents = studentService.findByUser(user);
-            
-            // Lấy danh sách student IDs của user hiện tại
             List<Long> currentStudentIds = currentUserStudents.stream()
                     .map(Student::getId)
-                    .collect(Collectors.toList());
+                    .toList();
             
-            // Bước 3: Với mỗi Assignment, kiểm tra xem có StudentAssignment nào của user hiện tại không
             List<Map<String, Object>> result = assignments.stream().map(assignment -> {
                 Map<String, Object> map = new HashMap<>();
                 map.put("assignmentId", assignment.getId());
@@ -156,11 +122,9 @@ public class AssignmentController {
                 map.put("deadline", assignment.getDeadline());
                 map.put("createdAt", assignment.getCreatedAt());
                 
-                // Bước 4: Lấy tất cả StudentAssignment của assignment này
                 List<StudentAssignment> studentAssignments = studentAssignmentService.findByAssignment(assignment);
                 map.put("studentCount", studentAssignments.size());
                 
-                // Bước 5: Kiểm tra xem có StudentAssignment nào có student_id thuộc currentStudentIds không
                 StudentAssignment myAssignment = null;
                 for (StudentAssignment sa : studentAssignments) {
                     Long studentId = sa.getStudent().getId();
@@ -171,7 +135,6 @@ public class AssignmentController {
                     }
                 }
                 
-                // Bước 6: Nếu tìm thấy → joined = true, nếu không → joined = false
                 if (myAssignment != null) {
                     map.put("joined", true);
                     map.put("commitCount", myAssignment.getCommitCount());
@@ -189,10 +152,7 @@ public class AssignmentController {
             return ResponseEntity.badRequest().build();
         }
     }
-    
-    /**
-     * Get students in an assignment
-     */
+
     @GetMapping("/{assignmentCode}/students")
     public ResponseEntity<List<Map<String, Object>>> getStudentsInAssignment(
             @PathVariable String assignmentCode,
@@ -203,12 +163,11 @@ public class AssignmentController {
             
             Assignment assignment = assignmentService.getAssignmentByCode(assignmentCode);
             
-            // Verify teacher ownership
             if (!assignment.getClassRoom().getTeacher().getId().equals(teacher.getId())) {
                 return ResponseEntity.status(403).build();
             }
             
-            List<com.example.auto_git_be.entity.StudentAssignment> studentAssignments = 
+            List<StudentAssignment> studentAssignments =
                 assignmentService.getStudentsInAssignment(assignment);
             
             List<Map<String, Object>> result = studentAssignments.stream().map(sa -> {
@@ -227,10 +186,9 @@ public class AssignmentController {
             return ResponseEntity.badRequest().build();
         }
     }
-    
-    /**
-     * Update commit count for student assignment (called after push)
-     */
+
+
+    // Update commit count for student assignment (called after push)
     @PostMapping("/{assignmentCode}/update-commits")
     public ResponseEntity<Void> updateCommitCount(
             @PathVariable String assignmentCode,
@@ -245,13 +203,52 @@ public class AssignmentController {
             return ResponseEntity.badRequest().build();
         }
     }
-    
-    /**
-     * Update score from GitHub Actions (webhook endpoint)
-     * This endpoint can be called without authentication from GitHub Actions
-     */
+
+    // Check if deadline has passed for an assignment (Student only)
+    @GetMapping("/{assignmentCode}/deadline/check")
+    public ResponseEntity<Map<String, Object>> checkDeadline(
+            @PathVariable String assignmentCode,
+            @RequestHeader("Authorization") String authHeader) {
+        try {
+            String token = authHeader.substring(7);
+            User user = authService.getUserFromToken(token);
+            
+            Assignment assignment = assignmentService.getAssignmentByCode(assignmentCode);
+            if (assignment == null) {
+                return ResponseEntity.badRequest().body(Map.of("error", "Assignment not found"));
+            }
+            
+            LocalDateTime deadline = assignment.getDeadline();
+            Map<String, Object> response = new HashMap<>();
+            
+            if (deadline == null) {
+                // No deadline set - always allow push
+                response.put("hasDeadline", false);
+                response.put("canPush", true);
+                response.put("message", "No deadline set for this assignment");
+            } else {
+                LocalDateTime now = LocalDateTime.now();
+                boolean canPush = now.isBefore(deadline);
+                
+                response.put("hasDeadline", true);
+                response.put("deadline", deadline.toString());
+                response.put("canPush", canPush);
+                
+                if (canPush) {
+                    response.put("message", "Deadline has not passed yet");
+                } else {
+                    response.put("message", "Deadline has passed");
+                }
+            }
+            
+            return ResponseEntity.ok(response);
+        } catch (Exception e) {
+            return ResponseEntity.badRequest().body(Map.of("error", e.getMessage()));
+        }
+    }
+
     @PostMapping("/update-score")
-    public ResponseEntity<Map<String, String>> updateScore(@RequestBody ScoreUpdateRequest request) {
+    public ResponseEntity<Map<String, String>> updateScoreFromGithubAction(@RequestBody ScoreUpdateRequest request) {
         try {
             assignmentService.updateStudentScore(
                 request.getRepoFullName(), 
@@ -270,10 +267,7 @@ public class AssignmentController {
             ));
         }
     }
-    
-    /**
-     * Delete an assignment
-     */
+
     @DeleteMapping("/{assignmentCode}")
     public ResponseEntity<Void> deleteAssignment(
             @PathVariable String assignmentCode,
@@ -288,11 +282,7 @@ public class AssignmentController {
             return ResponseEntity.badRequest().build();
         }
     }
-    
-    /**
-     * Setup workspace for assignment (Teacher only)
-     * Creates worktrees for all students' branches
-     */
+
     @PostMapping("/{assignmentCode}/workspace/setup")
     public ResponseEntity<Map<String, String>> setupAssignmentWorkspace(
             @PathVariable String assignmentCode,
@@ -306,23 +296,17 @@ public class AssignmentController {
                 return ResponseEntity.badRequest().body(Map.of("error", "Assignment not found"));
             }
             
-            // Verify teacher owns this assignment's class
             if (!assignment.getClassRoom().getTeacher().getId().equals(teacher.getId())) {
                 return ResponseEntity.status(403).body(Map.of("error", "Not authorized"));
             }
             
-            // Get teacher's local path from database
             Optional<TeacherAssignment> teacherAssignment = teacherAssignmentService.getTeacherAssignment(teacher, assignment);
             String localPath = teacherAssignment.map(TeacherAssignment::getLocalPath).orElse(null);
             
             if (localPath == null || localPath.isEmpty()) {
                 return ResponseEntity.badRequest().body(Map.of("error", "Local path not found. Please create assignment first."));
             }
-            
-            // Get all student assignments
             List<StudentAssignment> studentAssignments = studentAssignmentService.findByAssignment(assignment);
-            
-            // Setup workspace with actual localPath
             String workspacePath = assignmentWorkspaceService.setupAssignmentWorkspace(assignment, studentAssignments, token, localPath);
             
             return ResponseEntity.ok(Map.of(
@@ -333,11 +317,7 @@ public class AssignmentController {
             return ResponseEntity.badRequest().body(Map.of("error", e.getMessage()));
         }
     }
-    
-    /**
-     * Sync workspace for assignment (Teacher only)
-     * Pulls latest code from all student branches
-     */
+
     @PostMapping("/{assignmentCode}/workspace/sync")
     public ResponseEntity<Map<String, String>> syncAssignmentWorkspace(
             @PathVariable String assignmentCode,
@@ -351,23 +331,18 @@ public class AssignmentController {
                 return ResponseEntity.badRequest().body(Map.of("error", "Assignment not found"));
             }
             
-            // Verify teacher owns this assignment's class
             if (!assignment.getClassRoom().getTeacher().getId().equals(teacher.getId())) {
                 return ResponseEntity.status(403).body(Map.of("error", "Not authorized"));
             }
             
-            // Get teacher's local path from database
             Optional<TeacherAssignment> teacherAssignment = teacherAssignmentService.getTeacherAssignment(teacher, assignment);
             String localPath = teacherAssignment.map(TeacherAssignment::getLocalPath).orElse(null);
             
             if (localPath == null || localPath.isEmpty()) {
                 return ResponseEntity.badRequest().body(Map.of("error", "Local path not found. Please setup workspace first."));
             }
-            
-            // Get all student assignments
             List<StudentAssignment> studentAssignments = studentAssignmentService.findByAssignment(assignment);
             
-            // Sync workspace with actual localPath
             assignmentWorkspaceService.syncAssignmentWorkspace(assignment, studentAssignments, localPath);
             
             return ResponseEntity.ok(Map.of(
@@ -453,10 +428,7 @@ public class AssignmentController {
             return ResponseEntity.badRequest().body(Map.of("error", e.getMessage()));
         }
     }
-    
-    /**
-     * Get teacher's local path for assignment
-     */
+
     @GetMapping("/{assignmentCode}/teacher/localPath")
     public ResponseEntity<Map<String, Object>> getTeacherLocalPath(
             @PathVariable String assignmentCode,
@@ -470,13 +442,11 @@ public class AssignmentController {
                 return ResponseEntity.badRequest().body(Map.of("error", "Assignment not found"));
             }
             
-            // Check if teacher has access
             if (!teacherAssignmentService.hasAccess(teacher, assignment)) {
                 return ResponseEntity.status(403).body(Map.of("error", "Not authorized"));
             }
             
             String localPath = teacherAssignmentService.getLocalPath(teacher, assignment);
-            
             if (localPath == null) {
                 return ResponseEntity.ok(Map.of(
                     "localPath", "",
